# Vulkan-Voxels

./: Cargo.toml  build.rs
assets/shaders/: shader.vert
benches/: benchmark.rs
src/: app.rs  config.rs  inputs.rs  lib.rs  main.rs
src/render/: buffer.rs  camera.rs  commands.rs  depth.rs  device.rs  framebuffers.rs  images.rs  instance.rs  memory.rs  mod.rs  physical_device.rs  pipeline.rs  queue.rs  renderer.rs  swapchain.rs  sync.rs  uniforms.rs  vertex.rs
src/threads/: meshing.rs  mod.rs
src/world/: chunk.rs  mod.rs  world.rs
