[package]
name = "vulkan_voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkanalia = { version = "=0.12.0", features = ["libloading", "window"] }
winit = "0.24"
nalgebra-glm = "0.10"
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1"
crossbeam-channel = "0.5"