[package]
name = "vulkan_voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkanalia = { version = "=0.12.0", features = ["libloading", "window"] }
winit = "0.24"
nalgebra-glm = "0.10"
log = { version ="0.4", features = ["release_max_level_warn"] }
pretty_env_logger = "0.4"
anyhow = { version= "1" }
crossbeam-channel = "0.5"

profiling = "1.0"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
lazy_static = "1.4.0"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false


[features]
default = ["anyhow/backtrace"]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]


[profile.release]
lto = true
panic = "abort"
strip = true 